--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: Update Mutual Fund Data
 
 on:
   schedule:
-    - cron: '0 3 * * 1'   # Weekly
+    - cron: '0 3 * * 1'
   workflow_dispatch:
 
 jobs:
@@ -17,6 +17,8 @@ jobs:
           python-version: '3.11'
 
       - run: pip install requests
+
+      - run: mkdir -p data
 
       - run: python scripts/fetch_scheme_codes.py
       - run: python scripts/fetch_scheme_categories.py
