--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,17 +1,16 @@
 name: Update Mutual Fund Data
 
 on:
+  # DAILY – 4:00 AM IST → 22:30 UTC (previous day)
   schedule:
-    # DAILY – 4:00 AM IST → 22:30 UTC previous day
     - cron: '30 22 * * *'
 
-    # WEEKLY – Saturday 4:00 AM IST → Friday 22:30 UTC
-    - cron: '30 22 * * 5'
-
+  # Manual trigger
   workflow_dispatch:
 
 jobs:
-  update:
+  daily-update:
+    name: Daily MF Update
     runs-on: ubuntu-latest
 
     steps:
@@ -25,40 +24,62 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests pandas sqlite3
+          pip install requests pandas
 
       - name: Create data directory
         run: mkdir -p data
 
-      # ---------------- DAILY SCRIPTS ----------------
-      - name: Fetch Scheme Codes (Daily)
+      # -------- DAILY SCRIPTS (4 AM IST) --------
+      - name: Fetch Scheme Codes
         run: python scripts/fetch_scheme_codes.py
 
-      - name: Fetch NAV History (Daily – Incremental)
+      - name: Fetch NAV History
         run: python scripts/fetch_nav_history.py
 
-      - name: Build NAV SQLite Database (Daily)
-        run: python scripts/build_nav_sqlite.py
+      - name: Export NAV Wide CSV
+        run: python scripts/export_nav_wide.py
 
-      - name: Export NAV Wide Table from SQLite (Daily)
-        run: python scripts/export_nav_wide_sqlite.py
-
-      - name: Export Master NAV History CSV (Daily)
-        run: python scripts/export_nav_master_csv.py
-
-      - name: Build Master File (Daily)
+      - name: Build Master File
         run: python scripts/build_master_file.py
 
-      # ---------------- WEEKLY SCRIPT ----------------
-      - name: Fetch Scheme Categories (Weekly – Saturday)
-        if: github.event.schedule == '30 22 * * 5'
-        run: python scripts/fetch_scheme_categories.py
-
-      # ---------------- COMMIT & PUSH ----------------
+      # -------- COMMIT & PUSH --------
       - name: Commit and push changes
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add .
-          git commit -m "Auto update MF data" || echo "No changes"
+          git commit -m "Daily MF data update" || echo "No changes"
+          git push
+
+  weekly-update:
+    name: Weekly MF Categories Update
+    runs-on: ubuntu-latest
+
+    # SATURDAY – 4:00 AM IST → Friday 22:30 UTC
+    if: github.event_name == 'schedule'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          pip install requests pandas
+
+      # -------- WEEKLY SCRIPT --------
+      - name: Fetch Scheme Categories (Weekly)
+        run: python scripts/fetch_scheme_categories.py
+
+      # -------- COMMIT & PUSH --------
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add .
+          git commit -m "Weekly MF scheme categories update" || echo "No changes"
           git push
