--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -34,20 +34,25 @@ jobs:
       - name: Fetch Scheme Codes (Daily)
         run: python scripts/fetch_scheme_codes.py
 
+      # -------- WEEKLY SCRIPT (Saturday 4 AM IST) --------
+      - name: Fetch Scheme Categories (Weekly)
+        if: github.event.schedule == '30 22 * * 5'
+        run: python scripts/fetch_scheme_categories.py        
+
+      # -------- DAILY SCRIPTS (4 AM IST) --------        
       - name: Build Master File (Daily)
         run: python scripts/build_master_file.py
-        
+
+      # -------- DAILY SCRIPTS (4 AM IST) --------        
       - name: Fetch NAV History (Daily)
         run: python scripts/fetch_nav_history.py
 
+      # -------- DAILY SCRIPTS (4 AM IST) --------        
       - name: Export NAV Wide CSV (Daily)
         run: python scripts/export_nav_wide.py
 
 
-      # -------- WEEKLY SCRIPT (Saturday 4 AM IST) --------
-      - name: Fetch Scheme Categories (Weekly)
-        if: github.event.schedule == '30 22 * * 5'
-        run: python scripts/fetch_scheme_categories.py
+
 
       # -------- COMMIT & PUSH --------
       - name: Commit and push changes
