--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,6 +11,9 @@ jobs:
   update:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write  # allows committing & pushing
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -50,6 +53,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add .
+          git add data/
           git commit -m "Auto update MF data" || echo "No changes"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
