--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -55,4 +55,6 @@ jobs:
           git config user.email "actions@github.com"
           git add data/
           git commit -m "Auto update MF data" || echo "No changes"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
+          git push https://$PAT_TOKEN@github.com/${{ github.repository }} HEAD:${{ github.ref }}
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
